[CLOUDTRUST-4742] Make MFA selection compatible with the Keycloak method