@@ -38,18 +38,26 @@ public class FormUtils {
         if (authSelections != null) {
             regCtx.setAlternatives(authSelections.stream()
                     .map(FormUtils::toAlternativeAuthenticator)
-                    .collect(Collectors.toList()));
+                    .toList());
         } else {
             regCtx.setAlternatives(Collections.emptyList());
         }
         return regCtx;
     }
 
+    /**
+     * @deprecated We shall try to use the Keycloak OOTB way of selecting authenticators. Use new CtAuthenticatorBean(...) instead
+     */
+    @Deprecated
     public static LoginFormsProvider getFormWithAuthenticators(AuthenticationFlowContext context, String selectedCredentialId) {
         return getFormWithAuthenticators(context, selectedCredentialId, u -> {
         });
     }
 
+    /**
+     * @deprecated We shall try to use the Keycloak OOTB way of selecting authenticators. Use new CtAuthenticatorBean(...) instead
+     */
+    @Deprecated
     public static LoginFormsProvider getFormWithAuthenticators(AuthenticationFlowContext context, String selectedCredentialId, Consumer<AlternativeAuthenticator> optionUpdater) {
         LoginFormsProvider form = context.form();
 
